refactor: Update backend configuration and dependencies - Remove workspaces from package.json, add MongoDB support in requirements.txt, and enhance FastAPI application with improved logging and health check endpoints. Update database configuration for SQLite and MongoDB integration.

--- a/packages/backend/requirements.txt
+++ b/packages/backend/requirements.txt
@@ -12,6 +12,8 @@ sqlalchemy==2.0.43
 alembic==1.13.1
 psycopg2-binary==2.9.7
 asyncpg==0.29.0
+pymongo[srv]==4.14.1
+motor==3.3.2
 
 # AI & ML
 openai==1.99.7
