--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "chonost-frontend",
+  "name": "chonost-editor",
   "version": "1.0.0",
-  "description": "Chonost Frontend - The Ultimate Creative Workspace",
-  "main": "index.js",
+  "description": "Chonost Editor - The Ultimate Creative Workspace",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -13,25 +13,25 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.5.0",
-    "@tauri-apps/plugin-shell": "^1.0.0",
-    "@tauri-apps/plugin-fs": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
     "zustand": "^4.4.0",
     "axios": "^1.6.0",
     "lucide-react": "^0.294.0",
-    "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
+    "@tanstack/react-query": "^5.0.0",
+    "react-hot-toast": "^2.4.1"
+  },
+  "devDependencies": {
+    "@tauri-apps/cli": "^1.5.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
-  },
-  "devDependencies": {
-    "@tauri-apps/cli": "^1.5.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0"
   }
 }
