--- a/packages/backend/requirements.txt
+++ b/packages/backend/requirements.txt
@@ -1,43 +1,31 @@
-# FastAPI Backend Dependencies for Chonost
-# Phase 1: Foundation & Core Infrastructure
-
-# Core Framework
-fastapi==0.116.1
-uvicorn[standard]==0.35.0
-pydantic==2.11.7
-pydantic-settings==2.2.1
+# FastAPI and core dependencies
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
 
 # Database
-sqlalchemy==2.0.43
-alembic==1.13.1
-psycopg2-binary==2.9.7
-asyncpg==0.29.0
-pymongo[srv]==4.14.1
+sqlalchemy[asyncio]==2.0.23
+aiosqlite==0.19.0
+
+# MongoDB
+pymongo==4.14.1
 motor==3.3.2
 
-# AI & ML
-openai==1.99.7
-anthropic==0.18.1
-sentence-transformers==2.5.1
-qdrant-client==1.7.0
+# AI and ML (simplified)
+openai==1.3.7
+anthropic==0.7.8
 
-# Task Queue & Background Processing
-celery==5.3.4
-redis==5.0.1
-dramatiq==1.15.0
+# Local AI Models (simplified)
+transformers==4.36.2
+sentence-transformers==2.2.2
 
-# File Processing
-watchdog==3.0.0
-python-magic==0.4.27
+# Authentication and security
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
 
 # Utilities
 python-dotenv==1.0.0
-httpx==0.28.1
+httpx==0.25.2
 aiofiles==23.2.1
-python-multipart==0.0.9
-
-# Development
-pytest==8.0.0
-pytest-asyncio==0.23.5
-black==24.1.1
-isort==5.13.2
