--- a/core-services/link-ai-core/backend/services/mcp-server/Dockerfile
+++ b/core-services/link-ai-core/backend/services/mcp-server/Dockerfile
@@ -1,21 +1,48 @@
-FROM python:3.11-slim
+# MCP Server Docker Image - Multi-stage optimized
+
+# Build stage
+FROM python:3.11-slim AS builder
 
 WORKDIR /app
 
-# Install system dependencies
+# Install build dependencies
+RUN apt-get update && apt-get install -y \
+    gcc \
+    && rm -rf /var/lib/apt/lists/*
+
+# Copy and install Python dependencies
+COPY requirements.txt .
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
+RUN pip install --no-cache-dir --upgrade pip
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Production stage
+FROM python:3.11-slim AS production
+
+WORKDIR /app
+
+# Install minimal runtime dependencies
 RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements and install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Copy virtual environment from builder stage
+COPY --from=builder /opt/venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 
-# Copy application code
-COPY . .
+# Copy only necessary application code
+COPY main.py .
+COPY src/ ./src/
+COPY configs/ ./configs/
+COPY scripts/ ./scripts/
 
 # Create necessary directories
-RUN mkdir -p /workspace /docs /config /logs
+RUN mkdir -p /workspace /docs /config /logs /data
+
+# Set environment variables
+ENV PYTHONPATH=/app
+ENV PYTHONUNBUFFERED=1
 
 EXPOSE 8000
 
