--- a/craft-ide/package.json
+++ b/craft-ide/package.json
@@ -1,13 +1,14 @@
 {
   "name": "craft-ide",
   "version": "0.1.0",
-  "description": "A modern IDE with AI integration, Monaco Editor, and multi-mode interface",
+  "description": "A modern IDE with AI integration, Monaco Editor, multi-mode interface, and Thai/English i18n support",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "i18n:extract": "i18next-scanner --config i18n.config.js"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.61.0",
@@ -15,6 +16,9 @@
     "@monaco-editor/react": "^4.7.0",
     "@tailwindcss/postcss": "^4.1.13",
     "chart.js": "^4.4.0",
+    "framer-motion": "^10.16.4",
+    "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.1.0",
     "lucide-react": "^0.263.1",
     "mermaid": "^10.9.4",
     "monaco-editor": "^0.44.0",
@@ -22,6 +26,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.0.0",
     "react-markdown": "^9.0.1",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
@@ -41,6 +46,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "i18next-scanner": "^4.2.1",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.12",
