--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,21 @@ services:
     networks:
       - chonost-network
 
+  # Grafana Monitoring
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3001:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning
+    depends_on:
+      - prometheus
+    networks:
+      - chonost-network
+
   # Testing Service
   testing:
     build:
@@ -118,6 +133,7 @@ volumes:
   postgres_data:
   redis_data:
   qdrant_data:
+  grafana_data:
 
 networks:
   chonost-network:
