--- a/.gitignore
+++ b/.gitignore
@@ -799,3 +799,11 @@ desktop.ini
 *.kilo
 Manus-rag-test.md
 mcp.json
+.clinerules/byterover-rules.md
+.kilocode/rules/byterover-rules.md
+.roo/rules/byterover-rules.md
+.windsurf/rules/byterover-rules.md
+.cursor/rules/byterover-rules.mdc
+.kiro/steering/byterover-rules.md
+.qoder/rules/byterover-rules.md
+.augment/rules/byterover-rules.md
