--- a/.github/workflows/version-management.yml
+++ b/.github/workflows/version-management.yml
@@ -7,6 +7,12 @@ on:
     branches: [ main, master ]
   workflow_dispatch:
 
+permissions:
+  contents: read
+  pull-requests: write
+  actions: read
+  security-events: write
+
 jobs:
   version-check:
     runs-on: ubuntu-latest
