--- a/core-services/link-ai-core/packages/vscode-ext/package.json
+++ b/core-services/link-ai-core/packages/vscode-ext/package.json
@@ -11,10 +11,7 @@
     "Other"
   ],
   "activationEvents": [
-    "onStartupFinished",
-    "onCommand:chonost.tools.run",
-    "onCommand:chonost.tools.pickAndRun",
-    "onCommand:chonost.tools.list"
+    "onStartupFinished"
   ],
   "main": "./dist/extension.js",
   "contributes": {
