--- a/package.json
+++ b/package.json
@@ -1,65 +1,36 @@
 {
-  "name": "chonost-manuscript-os",
-  "version": "2.1.0",
-  "description": "A comprehensive writing platform for authors to manage characters, stories, and creative elements",
-  "main": "index.js",
-  "keywords": [
-    "writing",
-    "authors",
-    "manuscript",
-    "characters",
-    "storytelling",
-    "creative-writing",
-    "tauri",
-    "desktop-app"
-  ],
+  "name": "chonost-manuscript-os-unified",
+  "version": "3.0.0",
+  "private": true,
+  "description": "An Intelligent Manuscript Management System with a unified architecture.",
   "author": "billlzzz10",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chonost/manuscript-os"
+    "url": "https://github.com/billlzzz10/Chonost-manifest-os"
   },
   "workspaces": [
+    "apps/*",
     "packages/*",
-    "apps/*"
+    "services/api-server"
   ],
+  "scripts": {
+    "dev": "npm run dev --workspace=craft-ide",
+    "dev:api": "npm run dev --workspace=api-server",
+    "build": "npm run build --workspace=craft-ide",
+    "tauri": "npm run tauri --workspace=craft-ide",
+    "test": "cd services/api-server && python -m pytest",
+    "docker:up": "docker-compose up -d --build",
+    "docker:down": "docker-compose down",
+    "prepare": "husky install",
+    "ai:commit": "node scripts/ai-commit.js commit"
+  },
   "devDependencies": {
-    "@iconify-json/bxl": "^1.2.2",
-    "@iconify-json/devicon": "^1.2.42",
-    "@iconify-json/noto": "^1.2.6",
-    "@iconify-json/skill-icons": "^1.2.3",
-    "@iconify-json/token-branded": "^1.2.26",
     "husky": "^8.0.3",
-    "lint-staged": "^15.2.0"
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.0.0"
   },
   "dependencies": {
-    "@iconify/react": "^6.0.0",
-    "mermaid": "^11.10.1",
-    "openai": "^4.26.0",
     "dotenv": "^16.3.1"
-  },
-  "scripts": {
-    "dev": "cd apps/frontend/chat-interface && npm run dev",
-    "build": "cd apps/frontend/chat-interface && npm run build",
-    "tauri": "cd apps/frontend/chat-interface && npm run tauri",
-    "tauri:dev": "cd apps/frontend/chat-interface && npm run tauri:dev",
-    "tauri:build": "cd apps/frontend/chat-interface && npm run tauri:build",
-    "test": "cd scripts && python -m pytest",
-    "dev:web": "cd apps/frontend/web && npm run dev",
-    "dev:chat": "cd apps/frontend/chat-interface && npm run dev",
-    "prepare": "husky install",
-    "ai:commit": "node scripts/ai-commit.js commit",
-    "ai:version": "node scripts/ai-commit.js version",
-    "ai:release": "node scripts/ai-commit.js release",
-    "commit": "git-cz"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,md,yml,yaml}": [
-      "prettier --write"
-    ]
   }
 }
