Remove legacy .continue configs and update environment setup
Deleted obsolete .continue configuration, docs, MCP server, prompt, and rule files. Added Docs/ENV_SETUP_GUIDE.md for clearer environment setup instructions. Updated .env.example with expanded configuration options and improved documentation. Migrated MCP server config to .kilocode/mcp.json and updated .gitignore accordingly. Refreshed CONTRIBUTING.md and README.md to reflect new workflow and architecture. Minor dependency and workspace adjustments in craft-ide/package.json and packages/ui/package.json.

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,90 @@ OPENROUTER_API_KEY=your_openrouter_api_key_here
 # Optional: Override AI models
 # AI_COMMIT_MODEL=google/gemini-2.5-flash-free
 # AI_VERSION_MODEL=google/gemini-2.5-flash-free
+
+# =============================================================================
+# CORE SERVICES CONFIGURATION
+# =============================================================================
+
+# Database Configuration
+POSTGRES_PASSWORD=your_secure_postgres_password_here
+DATABASE_URL=postgresql://postgres:your_secure_postgres_password_here@localhost:5432/chonost
+
+# Redis Configuration
+REDIS_URL=redis://localhost:6379
+
+# Qdrant Vector Database
+QDRANT_URL=http://localhost:6333
+
+# =============================================================================
+# AI SERVICES CONFIGURATION
+# =============================================================================
+
+# Azure OpenAI (for production)
+AZURE_OPENAI_API_KEY=your_azure_openai_api_key_here
+AZURE_OPENAI_ENDPOINT=your_azure_openai_endpoint_here
+
+# OpenAI (alternative)
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Anthropic Claude (alternative)
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+# Google AI (alternative)
+GOOGLE_AI_API_KEY=your_google_ai_api_key_here
+
+# =============================================================================
+# MONITORING & OBSERVABILITY
+# =============================================================================
+
+# Grafana Admin Password
+GF_SECURITY_ADMIN_PASSWORD=your_grafana_admin_password_here
+
+# =============================================================================
+# DEVELOPMENT CONFIGURATION
+# =============================================================================
+
+# API Server Configuration
+API_HOST=0.0.0.0
+API_PORT=8000
+API_RELOAD=true
+
+# Frontend Configuration
+FRONTEND_HOST=localhost
+FRONTEND_PORT=3000
+
+# MCP Server Configuration
+MCP_HOST=localhost
+MCP_PORT=8765
+
+# =============================================================================
+# SECURITY & AUTHENTICATION
+# =============================================================================
+
+# JWT Secret for API authentication
+JWT_SECRET=your_jwt_secret_key_here
+
+# Application Secret Key
+SECRET_KEY=your_application_secret_key_here
+
+# GitHub Token for integrations
+GITHUB_TOKEN=your_github_token_here
+
+# Codacy API Token for code analysis
+CODACY_API_TOKEN=your_codacy_token_here
+
+# =============================================================================
+# OPTIONAL FEATURES
+# =============================================================================
+
+# Notion Integration (if using Notion sync)
+NOTION_TOKEN=your_notion_token_here
+NOTION_DATABASE_ID=your_notion_database_id_here
+
+# File Upload Configuration
+MAX_UPLOAD_SIZE_MB=100
+ALLOWED_FILE_TYPES=pdf,docx,txt,md,json
+
+# Logging Configuration
+LOG_LEVEL=INFO
+LOG_FORMAT=json
