--- a/.gitignore
+++ b/.gitignore
@@ -807,3 +807,4 @@ mcp.json
 .kiro/steering/byterover-rules.md
 .qoder/rules/byterover-rules.md
 .augment/rules/byterover-rules.md
+.kilocode/mcp.json
