--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     environment:
       - POSTGRES_DB=chonost
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=password
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-chonost_secure_password_2024}
     ports:
       - "5432:5432"
     volumes:
