--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   },
   "devDependencies": {
     "husky": "^8.0.3",
-    "lint-staged": "^1.61.15
-    ",
+    "lint-staged": "^15.2.0",
     "prettier": "^3.0.0"
   },
   "dependencies": {
