--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,10 +10,14 @@
     "dev": "tsc --watch"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "lucide-react": "^0.263.1",
-    "simple-icons": "^9.0.0"
+    "simple-icons": "^9.0.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
