--- a/services/api-server/requirements.txt
+++ b/services/api-server/requirements.txt
@@ -1,89 +1,91 @@
-# Chonost API Server Requirements v2.1.0
-# Unified requirements combining backend and core-services dependencies
+# Chonost API Server Requirements v3.0.0
+# Updated requirements with latest stable versions for security and compatibility
 
 # FastAPI and ASGI
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
 
 # Database
-sqlalchemy[asyncio]==2.0.23
-aiosqlite==0.19.0
+sqlalchemy[asyncio]>=2.0.36
+aiosqlite>=0.20.0
 
 # MongoDB
-pymongo==4.6.1
-motor==3.3.2
+pymongo>=4.10.0
+motor>=3.6.0
 
 # AI and ML
-sentence-transformers==2.2.2
-transformers>=4.40.0
-torch>=2.7.1-rc1
-openai==1.3.7
-anthropic==0.7.8
+sentence-transformers>=3.0.0
+transformers>=4.45.0
+torch>=2.4.0
+openai>=1.50.0
+anthropic>=0.40.0
 
 # Configuration and validation
-pydantic==2.5.0
-pydantic-settings==2.1.0
+pydantic>=2.9.0
+pydantic-settings>=2.5.0
 
 # HTTP client
-httpx==0.25.2
+httpx>=0.27.0
 
 # Authentication
 python-jose[cryptography]>=3.4.0
-passlib[bcrypt]==1.7.4
-python-multipart>=0.0.7
+passlib[bcrypt]>=1.7.4
+python-multipart>=0.0.9
 
 # Utilities
-python-dotenv==1.0.0
+python-dotenv>=1.0.0
 
 # File System & Monitoring
-watchdog>=3.0.0
-pathlib2>=2.3.7
+watchdog>=5.0.0
 
 # Data Processing
-pandas>=2.1.0
-numpy>=1.24.0
+pandas>=2.2.0
+numpy>=2.0.0
 
 # Web Scraping & HTTP
-requests>=2.31.0
+requests>=2.32.0
 beautifulsoup4>=4.12.0
 
 # Testing
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-pytest-cov>=4.1.0
+pytest>=8.0.0
+pytest-asyncio>=0.24.0
+pytest-cov>=5.0.0
 
 # Code Quality
-black>=23.0.0
-isort>=5.12.0
-flake8>=6.0.0
-mypy>=1.7.0
+black>=24.0.0
+isort>=5.13.0
+flake8>=7.0.0
+mypy>=1.11.0
 
 # Documentation
-sphinx>=7.0.0
-sphinx-rtd-theme>=1.3.0
+sphinx>=8.0.0
+sphinx-rtd-theme>=2.0.0
 
 # Development Tools
 click>=8.1.0
-rich>=13.0.0
+rich>=13.8.0
 
 # Async Support
-aiofiles>=23.0.0
+aiofiles>=24.0.0
 
 # JSON & YAML
 pyyaml>=6.0.0
-jsonschema>=4.19.0
+jsonschema>=4.23.0
 
 # Logging
-structlog>=23.0.0
+structlog>=24.0.0
 
 # Security
-cryptography>=41.0.0
+cryptography>=43.0.0
 
 # WebSockets
-websockets==12.0
+websockets>=13.0.0
 
 # JWT
-pyjwt==2.8.0
+pyjwt>=2.9.0
 
 # Templates
-jinja2==3.1.2
+jinja2>=3.1.4
+
+# MCP Protocol
+mcp>=1.0.0
