--- a/apps/frontend/chat-interface/package.json
+++ b/apps/frontend/chat-interface/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "build:analyze": "vite build --config vite.config.analyze.js",
     "lint": "eslint .",
+    "test": "jest",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -73,7 +74,9 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.25.0",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.4.1",
@@ -81,6 +84,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "jest-environment-jsdom": "^30.0.5",
     "tw-animate-css": "^1.2.9",
     "vite": "^6.3.5",
     "webpack-bundle-analyzer": "^4.10.2"
