--- a/apps/frontend/chat-interface/package.json
+++ b/apps/frontend/chat-interface/package.json
@@ -72,16 +72,21 @@
     "vaul": "^1.1.2",
     "zod": "^3.24.4",
     "zustand": "^5.0.7"
+  },
+  "devDependencies": {
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.25.0",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.4.1",
-    "babel-jest": "^29.7.0",
     "eslint": "^9.33.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^16.0.0",
+    "jest-environment-jsdom": "^30.0.5",
+    "tw-animate-css": "^1.2.9",
+    "vite": "^6.3.5",
     "webpack-bundle-analyzer": "^4.10.2"
   },
   "packageManager": "pnpm@10.4.1+sha512.c753b6c3ad7afa13af388fa6d808035a008e30ea9993f58c6663e2bc5ff21679aa834db094987129aa4d488b86df57f7b634981b2f827cdcacc698cc0cfb88af"
