--- a/services/api-server/datasets/requirements_notion_ai_server.txt
+++ b/services/api-server/datasets/requirements_notion_ai_server.txt
@@ -55,4 +55,7 @@ ujson>=5.8.0
 
 # Development tools
 pre-commit>=3.5.0
+# HTTP and API
+requests>=2.31.0
+httpx>=0.25.0
 urllib3>=2.6.3 # not directly required, pinned by Snyk to avoid a vulnerability
