Fix CI failure and PR #164 Improvements (V3)
- Fixed CI failure by updating .github/workflows/version-managment.yml to use pnpm instead of npm.
- Corrected .github/labels.yml structure to a top-level list.
- Added pnpm-workspace.yaml to support workspace resolution.
- Updated @chonost/ui to use workspace:* in apps/web/package.json.
- Maintained previous fixes: Rust edition 2024, Tauri icons, CSP, and legal docs.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,7 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@chonost/ui": "2.1.0",
+    "@chonost/ui": "workspace:*",
     "@anthropic-ai/sdk": "^0.61.0",
     "@google/generative-ai": "^0.21.0",
     "@monaco-editor/react": "^4.7.0",
